package taskman.backend.task;

public class TaskStateAvailable extends TaskState{

    public TaskStateAvailable(){
        setStatus("available");
    }

    // TODO: transition to executing

}
