package taskman.backend.task;

public class TaskStatePlanned extends TaskState {

    public TaskStatePlanned(){
        setStatus("planned");
    }

    // TODO: transition to available

}
