@startuml

title __TASK's Class Diagram__\n

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class Task {
            - description : String
            - estimatedDuration : long
            - acceptableDeviation : double
            - dependencies : ArrayList<Task>
            - requirements : HashMap<ResourceType, Integer>
            + Task()
            - Task()
            + getDescription()
            - setDescription()
            + getEstimatedDuration()
            - setEstimatedDuration()
            + getAcceptableDeviation()
            - setAcceptableDeviation()
            + getTimeSpan()
            # setTimeSpan()
            - setTimeSpan()
            + getState()
            # setState()
            + getStatus()
            + updateStatus()
            + getDelay()
            + getAlternative()
            # setAlternativeTask()
            + setAlternative()
            + getDependencies()
            - setDependencies()
            # addDependencyTask()
            + addDependency()
            + removeDependency()
            + getRequirements()
            + addRequirement()
            {static} # containsLoop()
            + accept()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        abstract class TaskState {
            - status : String
            + getStatus()
            # setStatus()
            + getDelay()
            + updateStatus()
            + setAlternative()
            + addDependency()
            + planTask()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateAvailable {
            + TaskStateAvailable()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateExecuting {
            + TaskStateExecuting()
            + updateStatus()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateFailed {
            + TaskStateFailed()
            + setAlternative()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateFinished {
            + TaskStateFinished()
            + getDelay()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStatePlanned {
            + TaskStatePlanned()
        }
      }
    }
  }
  

  package taskman {
    package taskman.backend {
      package taskman.backend.task {
        class TaskStateUnavailable {
            + TaskStateUnavailable()
            + addDependency()
        }
      }
    }
  }
  

  Task -up-|> Entity
  Task o-- TimeSpan : timeSpan
  Task o-- TaskState : state
  Task o-- Task : alternative
  TaskStateAvailable -up-|> TaskState
  TaskStateExecuting -up-|> TaskState
  TaskStateFailed -up-|> TaskState
  TaskStateFinished -up-|> TaskState
  TaskStatePlanned -up-|> TaskState
  TaskStateUnavailable -up-|> TaskState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
